[si] update from Pootle (firefox)

--- a/si/browser/chrome/browser/places/places.properties
+++ b/si/browser/chrome/browser/places/places.properties
@@ -75,16 +75,16 @@ OrganizerQueryDownloads=බාගත කිරීම්
 OrganizerQueryAllBookmarks=සියලු පිටු සලකුණු
 OrganizerQueryTags=ටැග්
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=ලේබල
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=පිටු සලකුණ
+switchtabResultLabel=Tab
+keywordResultLabel=මූල පදය
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
