--- a/si/browser/chrome/browser/shellservice.properties
+++ b/si/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = මගෙන් යළි නොවිමසන්න (D)
 setDefaultBrowserNever.accesskey   = D
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=පෙරනිමි ගවේශකය
+setDefaultBrowserMessage=%S දැනට ඔබගේ පෙරනිමි ගවේශකය ලෙස සකසා නැත. ඔබට එය ඔබගේ පෙරනිමි ගවේශකය ලෙස සැකසීමට අවශ්‍යද?
+setDefaultBrowserDontAsk=%S ආරම්භවන සැමවිටම මෙම පරීක්‍ෂාව සිදු කරන්න.
 
 desktopBackgroundLeafNameWin=තිරමුහුණත්පසුබිම.bmp
 DesktopBackgroundDownloading=රූපය සුරකිමින්...
