--- a/si/dom/chrome/layout/css.properties
+++ b/si/dom/chrome/layout/css.properties
@@ -127,3 +127,7 @@ PEBadFontBlockEnd=Expected '}' to end @font-face rule but found '%1$S'.
 PEAnonBoxNotAlone=Did not expect anonymous box.
 PEFFVUnexpectedEOF=@font-feature-values රීතියේ බලාපොරොත්තු නොවූ අවසානයක්.
 PEFFVBlockStart=@font-feature-values රීතිය ඉදිරියෙන් { විවෘතවීමක් බලාපොරොත්තු වූ නමුත් ලද්දේ '%1$S'.
+PESupportsConditionStartEOF2='නැත', '( ' , හෝ ක්‍රියාව
+PESupportsConditionInParensEOF=')'
+PESupportsConditionNotEOF='නැත'
+PESupportsWhitespaceRequired=හිස්තනකට පසු 'නැත', 'සහ', හෝ 'හෝ' බලපොරොතුවේ.
