--- a/si/mobile/overrides/appstrings.properties
+++ b/si/mobile/overrides/appstrings.properties
@@ -5,7 +5,7 @@
 malformedURI=The URL is not valid and cannot be loaded.
 fileNotFound=Firefox හට %S හි ඇති ගොනුව සොයාගත නොහැක.
 dnsNotFound=Firefox හට %S හි ඇති සේවාදායකය සොයාගත නොහැක.
-protocolNotFound=මෙම ලිපිනය විවෘත කළයුත්තේ කෙසෙ දැයි Firefox නොදනි, මන්ද ප්‍රොටොකොලය (%S) කිසිදු වැඩසටහනක් සමඟ සම්න්ධ නොවේ.
+unknownProtocolFound=Firefox doesn't know how to open this address, because one of the following protocols (%S) isn't associated with any program or is not allowed in this context.
 connectionFailure=Firefox හට %S හි ඇත සේවාදායකය වෙතට සම්බන්ධතාවය ගොඩනගා ගත නොහැක.
 netInterrupt=පිටුව පූරණය අතරේදි  %S සඳහා වූ සබධතාවයට බාධා ඇති විය.
 netTimeout=%S හි සේවාදායකය ප්‍රතිචාර දැක් වීමට බොහෝ වේලාවක් ගනි.
@@ -31,6 +31,6 @@ externalProtocolChkMsg=Remember my choice for all links of this type.
 externalProtocolLaunchBtn=Launch application
 malwareBlocked=The site at %S has been reported as an attack site and has been blocked based on your security preferences.
 phishingBlocked=The website at %S has been reported as a web forgery designed to trick users into sharing personal or financial information.
-cspFrameAncestorBlocked=This page has a content security policy that prevents it from being embedded in this way.
+cspBlocked=This page has a content security policy that prevents it from being loaded in this way.
 corruptedContentError=The page you are trying to view cannot be shown because an error in the data transmission was detected.
 remoteXUL=This page uses an unsupported technology that is no longer available by default in Firefox.
