--- a/si/security/manager/chrome/pippki/pippki.properties
+++ b/si/security/manager/chrome/pippki/pippki.properties
@@ -73,18 +73,11 @@ pageInfo_NoEncryption=සම්බන්ධතාවය සංකේතාංක
 pageInfo_Privacy_None1=%S වෙබ් අඩවිය ඔබ බලන පිටුව සඳහා සංකේතාංකන සහාය නොදක්වයි.
 pageInfo_Privacy_None2=අන්තර්ජාලය හරහා සංකේතාංකනය නොකර දත්ත යැවු දත්ත හුවමාරු විමේදි වෙනත් අයට බලා ගත හැක.\u0020
 pageInfo_Privacy_None3=ඔබ පිරික්සන පිටුව සංකේතාංකනය කර නැත.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Connection Encrypted: High-grade Encryption (%1$S, %2$S bit keys)
-pageInfo_Privacy_Strong1=ඔබ බලමින් සිටන පිටුව අන්තර්ජාලය හරහා යැවීමට පෙර සංකේතාංකනය කළ එකකි.
-pageInfo_Privacy_Strong2=සංකේතාන්කනය පරිගණක දෙකක් අතර හුවමාරු වන දත්ත අවසර නොලත් පුද්ගලයින්ට කියවීම අපහසු වේ. එමනිසා ජාලය හරහා පිටුව ගමන් කිරීමේදි කිසිවෙකුට කියවිමේ හැකියාවක් නැත.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Connection Encrypted: Low-grade Encryption (%1$S, %2$S bit keys)
-pageInfo_Privacy_Weak1=%S වෙබ් අඩවිය ඔබ නරඹන පිටුව සඳහා අවම මට්ටමක සංකේතාවකයක් භාවිත කරයි.
-pageInfo_Privacy_Weak2=අවම මට්ටමේ සංකේතාන්කය වෙනත් අවසර නොලත් පුත්ගලයින්ට මෙම තොරතූර දර්ෂණයට අවකාශ ලැබේ.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_Privacy_Encrypted1=ඔබ බලමින් සිටන පිටුව අන්තර්ජාලය හරහා යැවීමට පෙර සංකේතාංකනය කළ එකකි.
 pageInfo_MixedContent=සබධතාවය අර්‍ධවශයෙන් සංකේතාංකනය කර ඇත
-pageInfo_Privacy_Mixed1=ඔබ භාවිත කළ පිටුවේ කොටසක් අන්තර්ජාලය හරහා දත්ත හුවමාරුවට පෙර සංකේතාකණය කර නොතිබිණි.
 
 #Cert Viewer
 certDetails=සහතික දර්ශනය:
@@ -151,17 +144,12 @@ writeFileUnknownError=නොදන්නා දෝෂය
 addExceptionBrandedWarning2=You are about to override how %S identifies this site.
 addExceptionInvalidHeader=මෙම අඩවිය සාවද්‍ය දත්ත මගිවන හදුනාගැනීමට උත්සාහ කරයි.
 addExceptionDomainMismatchShort=වැරදි අඩවියක්
-addExceptionDomainMismatchLong=සහතිකය අයත් වන්නේ වෙනත් අඩවියකටයි, එය හදුනාගැනිම්ව වංචාවක් ලෙස පෙන්නුම් කරයි.
 addExceptionExpiredShort=කල් ඉකුත්වූ දත්ත
-addExceptionExpiredLong=සහතිකය දැනට වලංගු නැත. මෙම හදුනා ගැනීම සොරකම් කළ හෝ නැති වූ එකක් ලෙස වාර්තාවි ඇති දැයි නිශ්චය කර ගැනීමට අපහසුය.
 addExceptionUnverifiedOrBadSignatureShort=නොදන්නා අනන්‍යතාවක්
-addExceptionUnverifiedOrBadSignatureLong=හඳුනාගත් බලධාරියකුගෙන් හෝ ආරක්ශාකාරී අත්සනකින් තහවුරු කර නොමැති බැවින්, සහතිකය විශ්වාස කළ නොහැක.
 addExceptionValidShort=වලංගු සහතිකයක්
 addExceptionValidLong=මෙම අඩවිය නිරවද්‍ය, සත්‍යාපනය කළ හදුනාගැනීමක් ලබාදේ. හැරදැමීමක් එක් කිරීමට අවශ්‍ය නැත.
 addExceptionCheckingShort=තොරතුරු පිරික්සමින්
-addExceptionCheckingLong=අඩවිය හදුනා ගැනීමට උත්සාහ කරමින්…
 addExceptionNoCertShort=තොරතුරු නැත
-addExceptionNoCertLong=ලබා දුන් අඩවිය සඳහා හදුනා ගැනිමේ තත්ත්වය ලගා ගත නොහැකි විය.
 addExceptionConnectionFailed=සම්බන්ධතාවය බිදවැටින
 
 #Certificate Exists in database
