--- a/si/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/si/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,6 +97,13 @@ quit-button.tooltiptext.linux2 = පිටවෙන්න %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = පිටවෙන්න %1$S (%2$S)
 
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
 
-loop-call-button.label = සංවාදයට යමෙකුට ආරාධනා කරන්න
-loop-call-button.tooltiptext = සංවාදයට යමෙකුට ආරාධනා කරන්න
+
+
+web-apps-button.label = යෙදුම්
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+# %S is the keyboard shortcut
