--- a/si/browser/chrome/browser/devtools/scratchpad.properties
+++ b/si/browser/chrome/browser/devtools/scratchpad.properties
@@ -31,6 +31,9 @@ openFile.title=ගොනුව විවෘත කරන්න
 # open fails.
 openFile.failed=තොනුව කියවීම අසාර්ථක විය.
 
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
+
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
 clearRecentMenuItems.label=අයිතම ඉවත් කරන්න
@@ -73,6 +76,11 @@ browserContext.notification=This scratchpad executes in the Browser context.
 # LOCALIZATION NOTE (help.openDocumentationPage): This returns a localized link with
 # documentation for Scratchpad on MDN.
 help.openDocumentationPage=https://developer.mozilla.org/en/Tools/Scratchpad
+
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = පේළිය %1$S, තීරුව %2$S
 
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
