--- a/si/browser/chrome/browser/devtools/webide.properties
+++ b/si/browser/chrome/browser/devtools/webide.properties
@@ -9,6 +9,10 @@ runtimeButton_label=දහාවන කාලය තෝරන්න
 
 
 
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=පූරණය වේ…
+
 # These messages appear in a notification box when an error occur.
 
 
@@ -18,6 +22,7 @@ runtimeButton_label=දහාවන කාලය තෝරන්න
 
 # Variable: error message (in english)
 
+
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
 # a given simulator version in the "Manage Simulators" pane.  %1$S: Firefox OS
 # version in the simulator, ex. 1.3.  %2$S: Simulator stability label, ex.
@@ -26,3 +31,5 @@ addons_status_installed=ස්ථාපිත
 
 
 # Validation status
+
+# Preferences
