--- a/si/mobile/android/chrome/aboutAddons.properties
+++ b/si/mobile/android/chrome/aboutAddons.properties
@@ -2,17 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-addonAction.enable=සක්‍රීය
-addonAction.disable=Disable
-addonAction.uninstall=Uninstall
-addonAction.cancel=එපා
-addonAction.options=විකල්ප
-
-addonsSearchEngine.description=Integrated Search
-
 addonType.extension=Extension
 addonType.theme=Theme
 addonType.locale=Locale
-addonType.search=Search
 
-addonStatus.uninstalled=%S will be uninstalled after restart.
+
+addons.browseAll=Browse all Firefox Add-ons
