--- a/si/mobile/overrides/passwordmgr.properties
+++ b/si/mobile/overrides/passwordmgr.properties
@@ -2,39 +2,24 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-rememberValue = මෙම අගය මතක තබා ගැනීමට රහස්පද කළමණාකරු භාවිතා කරන්න
-rememberPassword = මෙම රහස්පදය මතක තබා ගැනීමට රහස්පද කළමණාකරු භාවිතා කරන්න.
-savePasswordTitle = තහවුරු කිරීම
-# 1st string is product name, 2nd is the username for the login, 3rd is the
-#   login's hostname. Note that long usernames may be truncated.
-saveLoginText = Do you want %1$S to remember the password for "%2$S" on %3$S?
-# 1st string is product name, 2nd is the login's hostname
-saveLoginTextNoUsername = Do you want %1$S to remember this password on %2$S?
-promptNotNowButtonText = Not Now
-notifyBarNotNowButtonText = Not Now
-notifyBarNotNowButtonAccessKey =
-promptNeverForSiteButtonText = Never
-notifyBarNeverForSiteButtonText = Never
-notifyBarNeverForSiteButtonAccessKey =
-promptRememberButtonText = Remember
-notifyBarRememberButtonText = Remember
-notifyBarRememberButtonAccessKey =
-passwordChangeTitle = රහස්පදය වෙනස් කිරීම තහවුරු කිරීම
-passwordChangeText = Would you like to change the stored password for %S?
-passwordChangeTextNoUser = Would you like to change the stored password for this login?
-notifyBarChangeButtonText = Change
-notifyBarChangeButtonAccessKey =
-notifyBarDontChangeButtonText = වෙනස් කරන්න එපා
-notifyBarDontChangeButtonAccessKey =
-userSelectText = ඔබ රහස්පදය වෙනස් කරන්නේ කුමන පරිශීලකගෙද යන බවට තහවුරු කරන්න
-hidePasswords=රහස්පද සඟවන්න
-hidePasswordsAccessKey=P
-showPasswords=රහස්පද පෙන්වන්න
-showPasswordsAccessKey=P
-noMasterPasswordPrompt=ඔබට විශ්වාසද, ඔබගේ රහස්පද පෙන්වීම අවශ්‍යද?
-removeAllPasswordsPrompt=ඔබට විශ්වාසද, ඔබගේ රහස්පද සියල්ල ඉවත් කිරීම කරන්නඅවශ්‍යද?
-removeAllPasswordsTitle=සියලු රහස්පද ඉවත් කරන්න
-loginsSpielAll=පහත අඩවි සඳහා රහස්පදය ඔබේ පරිගණකයේ ගබඩා කර ඇත:
-loginsSpielFiltered=පහත රහස්පද ඔබගේ සෙවුම හා සැසදුනී
+# 1st string is the username for the login, 2nd is the login's hostname.
+# Note that long usernames may be truncated.
+savePassword=Save password for "%1$S" on %2$S?
+# String is the login's hostname
+savePasswordNoUser=Save password on %S?
+saveButton=Save
+dontSaveButton=Don't save
+
+# String is the login's hostname
+updatePassword=Update saved password for %S?
+updatePasswordNoUser=Update saved password for this login?
+updateButton=Update
+dontUpdateButton=Don't update
+
+userSelectText=ඔබ රහස්පදය වෙනස් කරන්නේ කුමන පරිශීලකගෙද යන බවට තහවුරු කරන්න
+passwordChangeTitle=රහස්පදය වෙනස් කිරීම තහවුරු කිරීම
+
+# Strings used by PromptService.js
+rememberPassword=මෙම රහස්පදය මතක තබා ගැනීමට රහස්පද කළමණාකරු භාවිතා කරන්න.
 username=පරිශීලක නම
 password=රහස්පදය
