--- a/si/toolkit/chrome/global/aboutTelemetry.properties
+++ b/si/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,9 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = මෙම පිටුව දූරාමිතිය මගින් එක්රැස් කරන කාර්ය්‍යක්ෂමතාව, දෘඩාංග, භාවිතය හා රුචිකරණ තොරතුරු පෙන්වයි. මෙම තොරතුරු %2$S වැඩිදියුණු කිරීමට සහයවීම සඳහා %1$S වෙත පළ කෙරේ.
 
+generalDataHeadingName = නම
+
+
 slowSqlMain = ප්‍රධාන තීරුව මත මන්දගාමී SQL ප්‍රකාශ
 
 slowSqlOther = සහායක තීරු මත මන්දගාමී SQL ප්‍රකාශ
@@ -46,7 +49,6 @@ enableTelemetry = දූරමිතිය සක්‍රීය
 
 keysHeader = වත්කම
 
-valuesHeader = අගය
 
 addonTableID = ඇඩෝන් හැඳිනීම
 
