--- a/si/toolkit/chrome/global/resetProfile.properties
+++ b/si/toolkit/chrome/global/resetProfile.properties
@@ -7,6 +7,4 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=ඔබ යම් කාලයකින් %S ආරම්භ කර නොමැති බව පෙනීයයි. ඔබට එය නැවුම් අත්දැකීමක් සඳහා පිරිසිදු කිරීමට අවශ්‍ය? කෙසේවුවවත්, සාදරයෙන් නැවත පිළිගනිමු!
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=ප්‍රතිසකසන්න %S (e)…
-resetProfile.resetButton.accesskey=e
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
