[si] update from Pootle (firefox)

--- a/si/browser/chrome/browser/devtools/app-manager.properties
+++ b/si/browser/chrome/browser/devtools/app-manager.properties
@@ -18,6 +18,7 @@ validator.expectProjectFolder=ව්‍යාපෘති බහලුම ගො
 validator.invalidProjectType=නොදන්නා ව්‍යාපෘති වර්ගය '%S'
 # LOCALIZATION NOTE (validator.missNameManifestProperty, validator.missIconsManifestProperty):
 # don't translate 'icons' and 'name'.
+validator.invalidAppType=නොදන්නා ඇප් වර්ගය: '%S'.
 # LOCALIZATION NOTE (validator.accessFailedLaunchPathBadHttpCode): %1$S is the URI of
 # the launch document, %2$S is the http error code.
 
