--- a/uk/security/manager/chrome/pippki/pippki.properties
+++ b/uk/security/manager/chrome/pippki/pippki.properties
@@ -156,9 +156,9 @@ addExceptionValidShort=Чинний сертифікат
 addExceptionValidLong=This site provides valid, verified identification.  There is no need to add an exception.
 addExceptionCheckingShort=Перевіряється інформація
 addExceptionCheckingLong2=Attempting to identify this site…
-addExceptionValidLong=Справжність цього сайту чинна та перевірена. Нема потреби додавати виняток.
-addExceptionNoCertShort=Нема наявної інформації
-addExceptionConnectionFailed=Не вдалося встановити зв’язок
+addExceptionNoCertShort=No Information Available
+addExceptionNoCertLong2=Unable to obtain identification status for this site.
+addExceptionConnectionFailed=Connection Failed
 
 #Certificate Exists in database
 caCertExistsTitle=Сертифікат існує
