--- a/uk/toolkit/chrome/global/aboutSupport.properties
+++ b/uk/toolkit/chrome/global/aboutSupport.properties
@@ -82,3 +82,7 @@ webglRenderer = Рендерер WebGL
 
 minLibVersions = Очікувана мінімальна версія
 loadedLibVersions = Поточна версія
+
+hasSeccompBPF = Seccomp-BPF (System Call Filtering)
+canSandboxContent = Content Process Sandboxing
+canSandboxMedia = Media Plugin Sandboxing
