--- a/uk/toolkit/chrome/global/aboutTelemetry.properties
+++ b/uk/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,10 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Ця сторінка показує інформація про продуктивність, апаратні засоби, використання та настройки зібрані за допомогою телеметрії. Ця інформація надсилається до  %1$S для вдосконалення %2$S.
 
+generalDataHeadingName = Name
+
+generalDataHeadingValue = Value
+
 slowSqlMain = Повільні SQL запити в головному потоці
 
 slowSqlOther = Повільні SQL запити в допоміжному потоці
