--- a/uk/toolkit/chrome/global/resetProfile.properties
+++ b/uk/toolkit/chrome/global/resetProfile.properties
@@ -6,3 +6,7 @@
 
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=Щось давненько ви не запускали %S. Може, почистити його щоб був як новенький? І, до речі, з поверненням!
+
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Refresh %S…
+refreshProfile.resetButton.accesskey=e
