--- a/uk/browser/chrome/browser/devtools/webide.properties
+++ b/uk/browser/chrome/browser/devtools/webide.properties
@@ -19,8 +19,8 @@ importPackagedApp_title=Select Directory
 importHostedApp_title=Open Hosted App
 importHostedApp_header=Enter Manifest URL
 
-notification_showTroubleShooting_label=troubleshooting
-notification_showTroubleShooting_accesskey=t
+notification_showTroubleShooting_label=Troubleshooting
+notification_showTroubleShooting_accesskey=T
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
 # title for browser tab projects when the tab is still loading.
@@ -74,3 +74,6 @@ status_valid=VALID
 status_warning=WARNINGS
 status_error=ERRORS
 status_unknown=UNKNOWN
+
+# Preferences
+devicepreferences_reset_default=Reset to default
