--- a/uk/security/manager/chrome/pipnss/nsserrors.properties
+++ b/uk/security/manager/chrome/pipnss/nsserrors.properties
@@ -121,7 +121,19 @@ SSL_ERROR_WEAK_SERVER_EPHEMERAL_DH_KEY=SSL received a weak ephemeral Diffie-Hell
 SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL отримав недійсне розширення даних NPN.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=Функція SSL не підтримується для з'єднань SSL 2.0.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=Функція SSL не підтримується для серверів.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=SSL feature not supported for clients.
+SSL_ERROR_INVALID_VERSION_RANGE=SSL version range is not valid.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=SSL peer selected a cipher suite disallowed for the selected protocol version.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL received a malformed Hello Verify Request handshake message.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL received an unexpected Hello Verify Request handshake message.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Функція SSL не підтримується для клієнтів.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL received an unexpected Certificate Status handshake message.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Unsupported hash algorithm used by TLS peer.
+SSL_ERROR_DIGEST_FAILURE=Digest function failed.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Incorrect signature algorithm specified in a digitally-signed element.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=The next protocol negotiation extension was enabled, but the callback was cleared prior to being needed.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=The server supports no protocols that the client advertises in the ALPN extension.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=The server rejected the handshake because the client downgraded to a lower TLS version than the server supports.
 SEC_ERROR_IO=Під час авторизації безпеки виникла помилка вводу/виводу.
 SEC_ERROR_LIBRARY_FAILURE=невдача з бібліотекою безпеки.
 SEC_ERROR_BAD_DATA=бібліотека безпеки: отримано неправильні дані.
