--- a/uk/webapprt/webapprt/overrides/appstrings.properties
+++ b/uk/webapprt/webapprt/overrides/appstrings.properties
@@ -20,7 +20,7 @@ isprinting=The document cannot change while Printing or in Print Preview.
 deniedPortAccess=The application tried to access a network port that it should not have access to. The application has canceled the request for your protection.
 proxyResolveFailure=The application is configured to use a proxy server that can't be found.
 proxyConnectFailure=The application is configured to use a proxy server that is refusing connections.
-contentEncodingError=The application recieved a response from a server which used an invalid or unsupported form of compression.
+contentEncodingError=The application received a response from a server which used an invalid or unsupported form of compression.
 unsafeContentType=The application cannot continue because it accessed a file type that may not be safe to open. Please contact the application authors to inform them of this problem.
 externalProtocolTitle=External Protocol Request
 externalProtocolPrompt=An external application must be launched to handle %1$S: links.\n\n\nRequested link:\n\n%2$S\n\nApplication: %3$S\n\n\nIf you were not expecting this request it may be an attempt to exploit a weakness in that other program. Cancel this request unless you are sure it is not malicious.\n
@@ -30,5 +30,6 @@ externalProtocolChkMsg=Remember my choice for all links of this type.
 externalProtocolLaunchBtn=Launch application
 malwareBlocked=The site at %S has been reported as an attack site and has been blocked based on your security preferences.
 phishingBlocked=The website at %S has been reported as a web forgery designed to trick users into sharing personal or financial information.
+cspBlocked=This application tried to access a resource that has a content security policy that prevents it from being loaded in this way.
 corruptedContentError=The application cannot continue loading because an error in the data transmission was detected.
 remoteXUL=This application tried to use an unsupported technology that is no longer available.
