[si] update from Pootle (firefox)

--- a/si/dom/chrome/layout/css.properties
+++ b/si/dom/chrome/layout/css.properties
@@ -76,6 +76,8 @@ PEPseudoSelNotPE=pseudo-අංගයක් බලාපොරොත්තු ව
 PEPseudoSelDoubleNot=Negation pseudo-class can't be negated '%1$S'.
 PEPseudoSelPEInNot=Pseudo-elements can't be negated '%1$S'.
 PEPseudoSelNewStyleOnly=මෙම pseudo-අංගය "::" හැඩ භාවිතා කළ යුතුම වේ: '%1$S'.
+PEPseudoSelEndOrUserActionPC='selector' අවසනය හෝ පරිශ්‍රීලකයාගේ ක්‍රියවලියවන 'pseudo-class' අවසනයට පසු 'pseudo-element' බලපොරොතුවේ නමුත් සොයා ගැනීමට හැකිඌය '%1$S'.
+PEPseudoSelNoUserActionPC='selector' අවසනයට පසු 'pseudo-element' තිබිය උතුය එය පරිශ්‍රීලකයාගේ ක්‍රියවලියවන 'pseudo-classes' ට ආධාරයක් නොවිය යුතුය, නමුත් සොයා ගැනීමට හැකිඌය '%1$S'.
 PEPseudoSelMultiplePE=අමතර pseudo-අංගය '%1$S'.
 PEPseudoSelUnknown=නොදන්නා pseudo-class හෝ pseudo-element '%1$S'.
 PENegationEOF=නිෂේධනය තුළ වාරකය
