--- a/uk/security/manager/chrome/pipnss/nsserrors.properties
+++ b/uk/security/manager/chrome/pipnss/nsserrors.properties
@@ -126,7 +126,7 @@ SSL_ERROR_INVALID_VERSION_RANGE=SSL version range is not valid.
 SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=SSL peer selected a cipher suite disallowed for the selected protocol version.
 SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL received a malformed Hello Verify Request handshake message.
 SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL received an unexpected Hello Verify Request handshake message.
-SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Функція SSL не підтримується для клієнтів.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=SSL feature not supported for the protocol version.
 SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL received an unexpected Certificate Status handshake message.
 SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Unsupported hash algorithm used by TLS peer.
 SSL_ERROR_DIGEST_FAILURE=Digest function failed.
