--- a/uk/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/uk/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -100,19 +100,19 @@ quit-button.tooltiptext.mac = Закрити %1$S (%2$S)
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
 loop-call-button3.label = Hello
-loop-call-button3.tooltiptext = Start a conversation
+loop-call-button3.tooltiptext = Почати розмову
 
-social-share-button.label = Share This Page
-social-share-button.tooltiptext = Share this page
+social-share-button.label = Поділитися цією сторінкою
+social-share-button.tooltiptext = Поділитися цією сторінкою
 
-panic-button.label = Forget
-panic-button.tooltiptext = Forget about some browsing history
+panic-button.label = Забути
+panic-button.tooltiptext = Забути деяку історію перегляду
 
-web-apps-button.label = Apps
-web-apps-button.tooltiptext = Discover Apps
+web-apps-button.label = Програми
+web-apps-button.tooltiptext = Ознайомитися з програмами
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 # %S is the keyboard shortcut
 devtools-webide-button2.label = WebIDE
-devtools-webide-button2.tooltiptext = Open WebIDE (%S)
+devtools-webide-button2.tooltiptext = Відкрити WebIDE (%S)
