[si] update from Pootle (firefox)

--- a/si/dom/chrome/layout/css.properties
+++ b/si/dom/chrome/layout/css.properties
@@ -89,6 +89,7 @@ PEPseudoClassArgNotIdent=Expected identifier for pseudo-class parameter but foun
 PEPseudoClassArgNotNth=Expected part of argument to pseudo-class but found '%1$S'.
 PEPseudoClassNoClose=Missing closing ')' in pseudo-class, found '%1$S' instead.
 PEPseudoClassNoArg=Missing argument in pseudo-class '%1$S'.
+PEPseudoClassNotUserAction=තොරනාගේ අවසනය හෝ පරිශ්‍රීලකයාගේ ක්‍රියවලියවන '' අවසනයට පසු ''තිබිය යුතුය නමුත් සොයා ගැනීමට හැකිඌය 'pseudo-class' '%1$S'.
 PESelectorEOF=selector
 PEBadDeclBlockStart=ප්‍රකාශන බ්ලොකය ආරම්භ කිරීමට '{' බලාපොරොත්තු වුවත් ලැබුනේ '%1$S'.
 PEColorEOF=color
@@ -104,6 +105,7 @@ PEColorSaturationEOF=saturation
 PEColorLightnessEOF=lightness
 PEColorOpacityEOF=වර්ණ අගයේ පාරාන්ධතාව
 PEExpectedNumber=අංකයක් බලාපොරොත්තු වූවත් ලැබුනේ '%1$S'.
+PEPositionEOF=<ස්ථානය>
 PEExpectedCloseParen=')' බලාපොරොත්තු වූවත් ලැබුනේ '%1$S'.
 PEDeclEndEOF=ප්‍රකාශනය අවසාන කිරීමට ';' හෝ '}'
 PEParseDeclarationNoColon=':' බලාපොරොත්තු වූවත් ලැබුනේ '%1$S'.
@@ -129,6 +131,10 @@ PEBadFontBlockEnd=Expected '}' to end @font-face rule but found '%1$S'.
 PEAnonBoxNotAlone=Did not expect anonymous box.
 PEFFVUnexpectedEOF=@font-feature-values රීතියේ බලාපොරොත්තු නොවූ අවසානයක්.
 PEFFVBlockStart=@font-feature-values රීතිය ඉදිරියෙන් { විවෘතවීමක් බලාපොරොත්තු වූ නමුත් ලද්දේ '%1$S'.
+PEFFVUnknownFontVariantPropValue='%1$S' හදුනාගත නාෙහැකි 'font-variant' අගයකි.
+PEFFVExpectedValue=ධන පූර්ණ සංඛ්‍යාව අගයක් බලපොරොතුව නමුත් සොයා ගැනීමට හැකිඌය '%1$S'.
+PEFFVTooManyValues='feature' වර්ගය එකට බලපොරුතු ඌවාට වඩා වැඩි අගයන් ගනනක් අැත '%1$S'.
+PEFFVGenericInFamilyList=වර්ගීකරන ලැයිස්තුව තුල එකම වර්ගය මුද්‍රණ අකුරු පවුල් නම් නොතිබිය යුතුය.
 PESupportsConditionStartEOF2='නැත', '( ', හෝ ක්‍රියාව
 PESupportsConditionInParensEOF=')'
 PESupportsConditionNotEOF='නැත'
