tookit mac Done => Færdig

--- a/da/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/da/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -38,7 +38,7 @@ profileCreationFailedTitle=Oprettelse af profil mislykkedes
 profileExists=En profil med dette navn eksisterer allerede. Vælg venligst et andet navn.
 profileExistsTitle=Profil eksisterer
 profileFinishText=Klik på 'Afslut' for at oprette profilen.
-profileFinishTextMac=Klik på 'Afslut' for at oprette profilen.
+profileFinishTextMac=Klik på 'Færdig' for at oprette profilen.
 profileMissing=Din %S profil kan ikke indlæses. Den findes ikke eller er utilgængelig.
 profileMissingTitle=Profil mangler
 
