--- a/en-GB/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/en-GB/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -161,6 +161,8 @@ addon.purchase.label=Purchase for %S…
 addon.purchase.tooltip=Visit the add-ons gallery to purchase this add-on
 #LOCALIZATION NOTE (cmd.purchaseAddon.label) displayed on a button in the detail
 # view, %S is the price of the add-on including currency symbol
+cmd.purchaseAddon.label=Purchase for %S…
+cmd.purchaseAddon.accesskey=u
 
 #LOCALIZATION NOTE (eulaHeader) %S is name of the add-on asking the user to agree to the EULA
 eulaHeader=%S requires that you accept the following End User Licence Agreement before installation can proceed:
