--- a/en-GB/toolkit/chrome/mozapps/handling/handling.properties
+++ b/en-GB/toolkit/chrome/mozapps/handling/handling.properties
@@ -5,6 +5,8 @@
 protocol.title=Launch Application
 protocol.description=This link needs to be opened with an application.
 protocol.choices.label=Send to:
-protocol.checkbox.extra=This can be changed in %S's preferences.\u0020
+protocol.checkbox.label=Remember my choice for %S links.
+protocol.checkbox.accesskey=R
+protocol.checkbox.extra=This can be changed in %S's preferences.
 
 choose.application.title=Another Application…
