--- a/en-CA/toolkit/chrome/global/autocomplete.properties
+++ b/en-CA/toolkit/chrome/global/autocomplete.properties
@@ -10,6 +10,8 @@ searchWithEngine = Search with %S
 # %1$S is the search engine's name, %2$S is the search query.
 # This format was chosen because the provider can also end with "Search"
 # (e.g.: MSN Search).
+searchWithEngineForQuery = %2$S — Search with %1$S
 switchToTab = Switch to tab
 # LOCALIZATION NOTE (visitURL):
 # %S is the URL to visit.
+visitURL = Visit %S
