--- a/en-GB/browser/chrome/browser/devtools/timeline.properties
+++ b/en-GB/browser/chrome/browser/devtools/timeline.properties
@@ -17,10 +17,12 @@ timeline.label=Timeline
 
 # LOCALIZATION NOTE (timeline.panelLabel):
 # This is used as the label for the toolbox panel.
+timeline.panelLabel=Timeline Panel
 
 # LOCALIZATION NOTE (timeline.tooltip):
 # This string is displayed in the tooltip of the tab when the timeline is
 # displayed inside the developer tools window.
+timeline.tooltip=Performance Timeline
 
 # LOCALIZATION NOTE (timeline.tick):
 # This string is displayed in the timeline overview, for delimiting ticks
@@ -29,7 +31,11 @@ timeline.tick=%S ms
 
 # LOCALIZATION NOTE (timeline.records):
 # This string is displayed in the timeline waterfall, as a title for the menu.
+timeline.records=RECORDS
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 timeline.label.styles=Styles
+timeline.label.reflow=Reflow
+timeline.label.paint=Paint
+timeline.label.domevent=DOM Event
