--- a/en-GB/browser/chrome/browser/devtools/webconsole.properties
+++ b/en-GB/browser/chrome/browser/devtools/webconsole.properties
@@ -9,13 +9,13 @@
 # A good criteria is the language in which you'd find the best
 # documentation on web development on the web.
 
-typeError=Error:\u0020
-typeWarning=Warning:\u0020
-typeNetwork=Network:\u0020
-typeException=Exception: \u0020
-typeCssParser=CSS Parser:\u0020
-typeStrict=Strict Warning:\u0020
-msgCategory=Category:\u0020
+typeError=Error:
+typeWarning=Warning:
+typeNetwork=Network:
+typeException=Exception:
+typeCssParser=CSS Parser:
+typeStrict=Strict Warning:
+msgCategory=Category:
 errLine=Line: %S
 btnHide=Hide
 btnPrefs=Preferences
@@ -26,6 +26,8 @@ tipMutation=Toggle DOM Mutation event logging
 btnGlobal=Global Messages
 tipGlobal=Toggle Global Message logging
 localConsole=Local Console
+clearConsoleCmd.label=Clear Console
+clearConsoleCmd.accesskey=e
 close.button=Close
 close.accesskey=C
 update.button=Update
