--- a/en-GB/browser/chrome/browser/places/places.properties
+++ b/en-GB/browser/chrome/browser/places/places.properties
@@ -28,6 +28,24 @@ sortByNameGeneric=Sort by Name
 # When any of these changes, all of the properties must be bumped, and the
 # change must be annotated here.  Both label and accesskey must be updated.
 # - version 1: changed view.sortBy.1.date.
+view.sortBy.1.name.label=Sort by Name
+view.sortBy.1.name.accesskey=N
+view.sortBy.1.url.label=Sort by Location
+view.sortBy.1.url.accesskey=L
+view.sortBy.1.date.label=Sort by Most Recent Visit
+view.sortBy.1.date.accesskey=V
+view.sortBy.1.visitCount.label=Sort by Visit Count
+view.sortBy.1.visitCount.accesskey=C
+view.sortBy.1.keyword.label=Sort by Keyword
+view.sortBy.1.keyword.accesskey=K
+view.sortBy.1.description.label=Sort by Description
+view.sortBy.1.description.accesskey=D
+view.sortBy.1.dateAdded.label=Sort by Added
+view.sortBy.1.dateAdded.accesskey=e
+view.sortBy.1.lastModified.label=Sort by Last Modified
+view.sortBy.1.lastModified.accesskey=M
+view.sortBy.1.tags.label=Sort by Tags
+view.sortBy.1.tags.accesskey=T
 
 searchBookmarks=Search Bookmarks
 searchHistory=Search History
@@ -73,3 +91,5 @@ searchengineResultLabel=Search
 # %S will be replaced with the application name.
 lockPrompt.title=Browser Startup Error
 lockPrompt.text=The bookmarks and history system will not be functional because one of %S's files is in use by another application. Some security software can cause this problem.
+lockPromptInfoButton.label=Learn More
+lockPromptInfoButton.accessKey=L
