--- a/en-GB/browser/chrome/browser/shellservice.properties
+++ b/en-GB/browser/chrome/browser/shellservice.properties
@@ -8,8 +8,12 @@ safeModeLabel=%S &Safe Mode
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
 setDefaultBrowserMessage2          = Get the most out of %S by setting it as your default browser
+setDefaultBrowserConfirm.label     = Use %S as my default browser
+setDefaultBrowserConfirm.accesskey = U
 setDefaultBrowserOptions.label     = Options
 setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = Not now
+setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = Don't ask me again
 setDefaultBrowserNever.accesskey   = D
 
