Bug 1103654 - Update en-GB for Gecko 35 - Firefox part - r=me

--- a/en-CA/browser/chrome/browser/browser.properties
+++ b/en-CA/browser/chrome/browser/browser.properties
@@ -104,6 +104,10 @@ badContentBlocked.blocked.message=%S is blocking content on this page.
 badContentBlocked.notblocked.message=%S is not blocking any content on this page.
 
 crashedpluginsMessage.title=The %S plugin has crashed.
+crashedpluginsMessage.reloadButton.label=Reload page
+crashedpluginsMessage.reloadButton.accesskey=R
+crashedpluginsMessage.submitButton.label=Submit a crash report
+crashedpluginsMessage.submitButton.accesskey=S
 crashedpluginsMessage.learnMore=Learn More…
 
 # Keyword fixup messages
@@ -151,9 +155,17 @@ pluginInfo.unknownPlugin=Unknown
 # LOCALIZATION NOTE (pluginActivateNow.label): This button will enable the
 # plugin in the current session for an short time (about an hour), auto-renewed
 # if the site keeps using the plugin.
+pluginActivateNow.label=Allow Now
+pluginActivateNow.accesskey=N
 # LOCALIZATION NOTE (pluginActivateAlways.label): This button will enable the
 # plugin for a long while (90 days), auto-renewed if the site keeps using the
 # plugin.
+pluginActivateAlways.label=Allow and Remember
+pluginActivateAlways.accesskey=R
+pluginBlockNow.label=Block Plugin
+pluginBlockNow.accesskey=B
+pluginContinue.label=Continue Allowing
+pluginContinue.accesskey=C
 
 # in-page UI
 PluginClickToActivate=Activate %S.
@@ -161,8 +173,12 @@ PluginVulnerableUpdatable=This plugin is vulnerable and should be updated.
 PluginVulnerableNoUpdate=This plugin has security vulnerabilities.
 
 # infobar UI
+pluginContinueBlocking.label=Continue Blocking
+pluginContinueBlocking.accesskey=B
 # LOCALIZATION NOTE (pluginActivateTrigger): Use the unicode ellipsis char, \u2026,
 # or use "..." if \u2026 doesn't suit traditions in your locale.
+pluginActivateTrigger.label=Allow…
+pluginActivateTrigger.accesskey=A
 
 # Sanitize
 # LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
@@ -186,6 +202,8 @@ sanitizeSelectedWarning=All selected items will be cleared.
 
 # LOCALIZATION NOTE (downloadAndInstallButton.label): %S is replaced by the
 # version of the update: "Update to 28.0".
+update.downloadAndInstallButton.label=Update to %S
+update.downloadAndInstallButton.accesskey=U
 
 # RSS Pretty Print
 feedShowFeedNew=Subscribe to '%S'…
@@ -300,6 +318,8 @@ editBookmarkPanel.editBookmarkTitle=Edit This Bookmark
 editBookmark.removeBookmarks.label=Remove Bookmark;Remove #1 Bookmarks
 
 # Post Update Notifications
+pu.notifyButton.label=Details…
+pu.notifyButton.accesskey=D
 # LOCALIZATION NOTE %S will be replaced by the short name of the application.
 puNotifyText=%S has been updated
 puAlertTitle=%S Updated
@@ -341,8 +361,14 @@ pointerLock.autoLock.title2=%S will hide the pointer.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
 # The two button strings will never be shown at the same time, so
 # it's okay for them to have the same access key
+safebrowsing.getMeOutOfHereButton.label=Get me out of here!
+safebrowsing.getMeOutOfHereButton.accessKey=G
 safebrowsing.reportedWebForgery=Reported Web Forgery!
+safebrowsing.notAForgeryButton.label=This isn't a web forgery…
+safebrowsing.notAForgeryButton.accessKey=F
 safebrowsing.reportedAttackSite=Reported Attack Site!
+safebrowsing.notAnAttackButton.label=This isn't an attack site…
+safebrowsing.notAnAttackButton.accessKey=A
 
 # Ctrl-Tab
 # LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
@@ -406,6 +432,8 @@ syncPromoNotification.addons-sync-disabled.description=You can use your %S accou
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
 dataReportingNotification.message       = %1$S automatically sends some data to %2$S so that we can improve your experience.
+dataReportingNotification.button.label  = Choose What I Share
+dataReportingNotification.button.accessKey  = C
 
 # Webapps notification popup
 webapps.install = Install
@@ -434,6 +462,8 @@ service.toolbarbutton.tooltiptext=Services
 
 # LOCALIZATION NOTE (social.install.description): %1$S is the hostname of the social provider, %2$S is brandShortName (e.g. Firefox)
 service.install.description=Would you like to enable services from %1$S to display in your %2$S toolbar and sidebar?
+service.install.ok.label=Enable Services
+service.install.ok.accesskey=E
 
 # LOCALIZATION NOTE (social.markpageMenu.label): %S is the name of the social provider
 social.markpageMenu.label=Save Page to %S
@@ -442,6 +472,10 @@ social.marklinkMenu.label=Save Link to %S
 
 # LOCALIZATION NOTE (social.error.message): %1$S is brandShortName (e.g. Firefox), %2$S is the name of the social provider
 social.error.message=%1$S is unable to connect with %2$S right now.
+social.error.tryAgain.label=Try Again
+social.error.tryAgain.accesskey=T
+social.error.closeSidebar.label=Close This Sidebar
+social.error.closeSidebar.accesskey=C
 
 # LOCALIZATION NOTE: %1$S is the label for the toolbar button, %2$S is the associated badge numbering that the social provider may provide.
 social.aria.toolbarButtonBadgeText=%1$S (%2$S)
@@ -452,6 +486,8 @@ identity.privacyPolicy = Privacy Policy
 # LOCALIZATION NOTE (identity.chooseIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.chooseIdentity.description = Sign in to %S
 identity.chooseIdentity.label = Use an existing email
+identity.newIdentity.label = Use a different email
+identity.newIdentity.accessKey = e
 identity.newIdentity.email.placeholder = Email
 # LOCALIZATION NOTE (identity.newIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.newIdentity.description = Enter your email address to sign in to %S
@@ -460,6 +496,8 @@ identity.next.accessKey = N
 # LOCALIZATION NOTE: shown in the popup notification when a user successfully logs into a website
 # LOCALIZATION NOTE (identity.loggedIn.description): %S is the user's identity (e.g. user@example.com)
 identity.loggedIn.description = Signed in as: %S
+identity.loggedIn.signOut.label = Sign Out
+identity.loggedIn.signOut.accessKey = O
 
 # LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message,
 #                    getUserMedia.shareScreen.message, getUserMedia.shareCameraAndMicrophone.message,
@@ -470,6 +508,12 @@ getUserMedia.shareMicrophone.message = Would you like to share your microphone w
 getUserMedia.shareScreen.message = Would you like to share your screen with %S?
 getUserMedia.shareCameraAndMicrophone.message = Would you like to share your camera and microphone with %S?
 getUserMedia.shareScreenAndMicrophone.message = Would you like to share your microphone and screen with %S?
+getUserMedia.selectWindow.label=Window to share:
+getUserMedia.selectWindow.accesskey=W
+getUserMedia.selectScreen.label=Screen to share:
+getUserMedia.selectScreen.accesskey=S
+getUserMedia.selectApplication.label=Application to share:
+getUserMedia.selectApplication.accesskey=A
 getUserMedia.noVideo.label = No Video
 getUserMedia.noApplication.label = No Application
 getUserMedia.noScreen.label = No Screen
@@ -486,17 +530,31 @@ getUserMedia.shareApplicationWindowCount.label=#1 (#2 window);#1 (#2 windows)
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
+getUserMedia.shareSelectedDevices.label = Share Selected Device;Share Selected Devices
+getUserMedia.shareSelectedDevices.accesskey = S
 getUserMedia.shareScreen.label = Share Screen
 getUserMedia.shareApplication.label = Share Selected Application
 getUserMedia.shareWindow.label = Share Selected Window
 getUserMedia.shareSelectedItems.label = Share Selected Items
+getUserMedia.always.label = Always Share
+getUserMedia.always.accesskey = A
+getUserMedia.denyRequest.label = Don't Share
+getUserMedia.denyRequest.accesskey = D
+getUserMedia.never.label = Never Share
+getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = You are currently sharing your camera with this page.
 getUserMedia.sharingMicrophone.message2 = You are currently sharing your microphone with this page.
 getUserMedia.sharingCameraAndMicrophone.message2 = You are currently sharing your camera and microphone with this page.
 getUserMedia.sharingApplication.message = You are currently sharing an application with this page.
 getUserMedia.sharingScreen.message = You are currently sharing your screen with this page.
 getUserMedia.sharingWindow.message = You are currently sharing a window with this page.
+getUserMedia.continueSharing.label = Continue Sharing
+getUserMedia.continueSharing.accesskey = C
+getUserMedia.stopSharing.label = Stop Sharing
+getUserMedia.stopSharing.accesskey = S
 
+getUserMedia.sharingMenu.label = Tabs sharing devices
+getUserMedia.sharingMenu.accesskey = d
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
 #                    getUserMedia.sharingMenuMicrophone,
 #                    getUserMedia.sharingMenuApplication,
@@ -522,6 +580,12 @@ getUserMedia.sharingMenuCameraMicrophone = %S (camera and microphone)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (camera, microphone and application)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (camera, microphone and screen)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (camera, microphone and window)
+getUserMedia.sharingMenuCameraApplication = %S (camera and application)
+getUserMedia.sharingMenuCameraScreen = %S (camera and screen)
+getUserMedia.sharingMenuCameraWindow = %S (camera and window)
+getUserMedia.sharingMenuMicrophoneApplication = %S (microphone and application)
+getUserMedia.sharingMenuMicrophoneScreen = %S (microphone and screen)
+getUserMedia.sharingMenuMicrophoneWindow = %S (microphone and window)
 getUserMedia.sharingMenuMicrophoneApplication = %S (microphone and application)
 getUserMedia.sharingMenuMicrophoneScreen = %S (microphone and screen)
 getUserMedia.sharingMenuMicrophoneWindow = %S (microphone and window)
@@ -531,6 +595,10 @@ getUserMedia.sharingMenuUnknownHost = Unknown origin
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S seems slow… to… start.
+slowStartup.helpButton.label = Learn How to Speed It Up
+slowStartup.helpButton.accesskey = L
+slowStartup.disableNotificationButton.label = Don't Tell Me Again
+slowStartup.disableNotificationButton.accesskey = A
 
 
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
@@ -544,4 +612,7 @@ customizeTips.tip0.learnMore = Learn more
 # the appmenu labels and buttons that appear when an update is staged for
 # installation or a background update has failed and a manual download is required.
 # %S is brandShortName
+appmenu.restartNeeded.description = Restart %S to apply updates
+appmenu.updateFailed.description = Background update failed, please download update
 appmenu.restartBrowserButton.label = Restart %S
+appmenu.downloadUpdateButton.label = Download Update
