--- a/en-CA/browser/chrome/browser/devtools/scratchpad.properties
+++ b/en-CA/browser/chrome/browser/devtools/scratchpad.properties
@@ -34,6 +34,7 @@ openFile.failed=Failed to read the file.
 
 # LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
 # open fails.
+importFromFile.convert.failed=Failed to convert file to Unicode from %1$S.
 
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
