--- a/en-CA/browser/chrome/browser/preferences/preferences.properties
+++ b/en-CA/browser/chrome/browser/preferences/preferences.properties
@@ -126,6 +126,8 @@ actualAppCacheSize=Your application cache is currently using %1$S %2$S of disc s
 
 ###Preferences::Advanced::Update
 #LOCALIZATION NOTE: The next string is for updating in Windows 8 only instead of updateAuto1.label.  %S = brandShortName
+updateAutoDesktop.label=Automatically install updates from desktop %S
+updateAutoDesktop.accessKey=A
 
 syncUnlink.title=Do you want to unlink your device?
 syncUnlink.label=This device will no longer be associated with your Sync account. All of your personal data, both on this device and in your Sync account, will remain intact.
