--- a/en-GB/mobile/android/chrome/browser.properties
+++ b/en-GB/mobile/android/chrome/browser.properties
@@ -323,7 +323,9 @@ remoteNotificationGenericName=App
 # the remote debugger server is listening.
 remoteNotificationMessage=Listening on port %S
 # LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Activate debugging for %S
 # LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Touch to activate remote debugger
 
 # Helper apps
 helperapps.open=Open
