Bug 1103346 - Add renaming support to webIDE

--- a/sk/browser/chrome/browser/devtools/projecteditor.properties
+++ b/sk/browser/chrome/browser/devtools/projecteditor.properties
@@ -46,6 +46,11 @@ projecteditor.deleteFilePromptMessage=Naozaj chcete odstrániť tento súbor?
 # the directory.
 projecteditor.newLabel=Nový…
 
+# LOCALIZATION NOTE (projecteditor.renameLabel):
+# This string is displayed as a menu item for renaming a file in
+# the directory.
+projecteditor.renameLabel=Premenovať
+
 # LOCALIZATION NOTE (projecteditor.saveLabel):
 # This string is displayed as a menu item for saving the current file.
 projecteditor.saveLabel=Uložiť
