Bug 1079227 - Loop feedback form should always allow comments

--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -269,7 +269,7 @@ feedback_category_audio_quality=Kvalita zvuku
 feedback_category_video_quality=Kvalita videa
 feedback_category_was_disconnected=Prerušenie spojenia
 feedback_category_confusing=Som zmätený
-feedback_category_other=Iné:
+feedback_category_other2=Iné
 feedback_custom_category_text_placeholder=Čo nebolo v poriadku?
 feedback_submit_button=Odoslať
 feedback_back_button=Naspäť
