[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -2,16 +2,17 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-history-panelmenu.label = تاریخچه
+history-panelmenu.label = -تاریخچه
 # LOCALIZATION NOTE(history-panelmenu.tooltiptext2): %S is the keyboard shortcut
 history-panelmenu.tooltiptext2 = نمایش تاریخچه شما (%S)
 
+privatebrowsing-button.label = صفحۀ ناشناش جدید
 # LOCALIZATION NOTE(privatebrowsing-button.tooltiptext): %S is the keyboard shortcut
 privatebrowsing-button.tooltiptext = باز کردن پنجره جدید مرورگر خصوصی(%S)
 
 save-page-button.label = ذخیره صفحه
 # LOCALIZATION NOTE(save-page-button.tooltiptext3): %S is the keyboard shortcut
-save-page-button.tooltiptext3 = ذخیره این صفحه %S
+save-page-button.tooltiptext3 = ذخیره این صفحه( %S)
 
 find-button.label = پیدا کردن
 # LOCALIZATION NOTE(find-button.tooltiptext3): %S is the keyboard shortcut.
@@ -26,6 +27,7 @@ developer-button.label = توسعه‌دهنده
 developer-button.tooltiptext2 = باز کردن ابزارهای توسعه‌دهنده وب (%S)
 
 sidebar-button.label = نوارهای کناری
+sidebar-button.tooltiptext2 = نمایش نوار‌کناری
 
 add-ons-button.label = افزودنی‌ها
 # LOCALIZATION NOTE(add-ons-button.tooltiptext3): %S is the keyboard shortcut
