--- a/fa/browser/chrome/browser/newTab.properties
+++ b/fa/browser/chrome/browser/newTab.properties
@@ -8,6 +8,7 @@ newtab.block=حذف این سایت
 # LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
 # and enhanced tiles on the same line as the tile's title, so prefer short
 # strings to avoid overlap. This string should be uppercase.
+newtab.sponsored.button=حمایت شده
 # LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
 # the (X) block icon. %2$S will be replaced by an active link using string
 # newtab.learn.link as text.
