Corrections for Firefox

--- a/da/browser/chrome/browser/loop/loop.properties
+++ b/da/browser/chrome/browser/loop/loop.properties
@@ -14,7 +14,7 @@ first_time_experience_title={{clientShortname}} — Vær med i samtalen
 first_time_experience_button_label=Kom i gang
 
 share_link_header_text=Del dette link for at invitere nogen til at snakke:
-invite_header_text=Inviter nogen til at være med.
+invite_header_text=Inviter andre.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
