[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/browser.properties
+++ b/fa/browser/chrome/browser/browser.properties
@@ -148,6 +148,7 @@ pluginActivateDisabled.label=غیرفعال
 pluginActivateDisabled.manage=مدیریت افزونه‌ها...
 pluginEnabled.message=%Sبر روی %S فعال است‌‍‌‬‌
 pluginEnabledOutdated.message=افزایه‌ی قدیمی "%S" روی %S فعال است.
+pluginEnabledVulnerable.message=افزایه‌ی ناامن "%S" روی %S فعال است.
 pluginInfo.unknownPlugin=نامعلوم
 
 # LOCALIZATION NOTE (pluginActivateNow.label, pluginActivateAlways.label, pluginBlockNow.label): These should be the same as the matching strings in browser.dtd
