[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/browser.properties
+++ b/pt-BR/browser/chrome/browser/browser.properties
@@ -119,6 +119,7 @@ keywordURIFixup.message=Você estava tentando abrir %S?
 keywordURIFixup.goTo=Sim, abra %S
 keywordURIFixup.goTo.accesskey=S
 keywordURIFixup.dismiss=Não, obrigado
+keywordURIFixup.dismiss.accesskey=N
 
 ## Plugin doorhanger strings
 # LOCALIZATION NOTE (pluginActivateNew.message): Used for newly-installed
@@ -495,6 +496,8 @@ identity.next.accessKey = A
 # LOCALIZATION NOTE: shown in the popup notification when a user successfully logs into a website
 # LOCALIZATION NOTE (identity.loggedIn.description): %S is the user's identity (e.g. user@example.com)
 identity.loggedIn.description = Identificado como: %S
+identity.loggedIn.signOut.label = Sair
+identity.loggedIn.signOut.accessKey = S
 
 # LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message,
 #                    getUserMedia.shareScreen.message, getUserMedia.shareCameraAndMicrophone.message,
@@ -505,6 +508,12 @@ getUserMedia.shareMicrophone.message = Deseja compartilhar seu microfone com %S?
 getUserMedia.shareScreen.message = Deseja compartilhar sua tela com %S?
 getUserMedia.shareCameraAndMicrophone.message = Deseja compartilhar sua câmera e seu microfone com %S?
 getUserMedia.shareScreenAndMicrophone.message = Deseja compartilhar seu microfone e sua tela com %S?
+getUserMedia.selectWindow.label=Janela a compartilhar:
+getUserMedia.selectWindow.accesskey=J
+getUserMedia.selectScreen.label=Tela a compartilhar:
+getUserMedia.selectScreen.accesskey=T
+getUserMedia.selectApplication.label=Aplicativo a compartilhar:
+getUserMedia.selectApplication.accesskey=A
 getUserMedia.noVideo.label = Sem vídeo
 getUserMedia.noApplication.label = Nenhum aplicativo
 getUserMedia.noScreen.label = Nenhuma tela
@@ -521,12 +530,16 @@ getUserMedia.shareApplicationWindowCount.label=#1 (#2 janela);#1 (#2 janelas)
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
-getUserMedia.shareSelectedDevices.label = Compartilhar dispositivo selecionado; Compartilhar dispositivos selecionados
-getUserMedia.shareSelectedDevices.accesskey = C
+getUserMedia.shareSelectedDevices.label = Compartilhar dispositivo selecionado;Compartilhar dispositivos selecionados
+getUserMedia.shareSelectedDevices.accesskey = o
 getUserMedia.shareScreen.label = Compartilhar tela
 getUserMedia.shareApplication.label = Compartilhar aplicativo selecionado
 getUserMedia.shareWindow.label = Compartilhar janela selecionada
 getUserMedia.shareSelectedItems.label = Compartilhar itens selecionados
+getUserMedia.always.label = Compartilhar sempre
+getUserMedia.always.accesskey = s
+getUserMedia.denyRequest.label = Não compartilhar
+getUserMedia.denyRequest.accesskey = m
 getUserMedia.never.label = Nunca compartilhar
 getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = Você está compartilhando sua câmera com esta página.
@@ -540,6 +553,8 @@ getUserMedia.continueSharing.accesskey = C
 getUserMedia.stopSharing.label = Parar de compartilhar
 getUserMedia.stopSharing.accesskey = P
 
+getUserMedia.sharingMenu.label = Abas compartilhando dispositivos
+getUserMedia.sharingMenu.accesskey = A
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
 #                    getUserMedia.sharingMenuMicrophone,
 #                    getUserMedia.sharingMenuApplication,
@@ -577,8 +592,10 @@ getUserMedia.sharingMenuUnknownHost = Origem desconhecida
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = O %S aparenta iniciar… muito… lentamente.
-slowStartup.disableNotificationButton.label = Não me informe novamente
-slowStartup.disableNotificationButton.accesskey = a
+slowStartup.helpButton.label = Aprenda como acelerá-lo
+slowStartup.helpButton.accesskey = A
+slowStartup.disableNotificationButton.label = Não me avise novamente
+slowStartup.disableNotificationButton.accesskey = N
 
 
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
