--- a/pt-BR/browser/chrome/browser/devtools/webconsole.properties
+++ b/pt-BR/browser/chrome/browser/devtools/webconsole.properties
@@ -27,7 +27,7 @@ btnGlobal=Mensagens globais
 tipGlobal=Ativar ou desativar o registro de mensagens globais
 localConsole=Console local
 clearConsoleCmd.label=Limpar console
-clearConsoleCmd.accesskey=e
+clearConsoleCmd.accesskey=L
 close.button=Fechar
 close.accesskey=F
 update.button=Atualizar
