--- a/pt-BR/browser/chrome/browser/loop/loop.properties
+++ b/pt-BR/browser/chrome/browser/loop/loop.properties
@@ -63,6 +63,7 @@ retry_button=Tentar de novo
 share_email_subject4={{clientShortname}} — Entrar na conversa
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body4=Olá!\r\n\r\nConverse comigo com vídeo usando o {{clientShortname}}:\r\n\r\nVocê não precisa baixar ou instalar nada. Basta copiar e colar esse link em seu navegador:\r\n\r\n{{callUrl}}\r\n\r\nSe quiser, você também pode saber mais sobre o {{clientShortname}} em {{learnMoreUrl}}\r\n\r\nFalo com você em breve!
 share_button=Email
 copy_url_button=Copiar
 copy_url_button2=Copiar link
