--- a/pt-BR/browser/chrome/browser/shellservice.properties
+++ b/pt-BR/browser/chrome/browser/shellservice.properties
@@ -8,8 +8,8 @@ safeModeLabel=&Modo de segurança do %S
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
 setDefaultBrowserMessage2          = Consiga o máximo do %S definindo-o como seu navegador padrão
-setDefaultBrowserConfirm.label     = Use o %S como meu navegador padrão
-setDefaultBrowserConfirm.accesskey = U
+setDefaultBrowserConfirm.label     = Definir o %S como meu navegador padrão
+setDefaultBrowserConfirm.accesskey = D
 setDefaultBrowserOptions.label     = Opções
 setDefaultBrowserOptions.accesskey = O
 setDefaultBrowserNever.label       = Não perguntar de novo
