--- a/pt-BR/toolkit/chrome/global/aboutTelemetry.properties
+++ b/pt-BR/toolkit/chrome/global/aboutTelemetry.properties
@@ -9,6 +9,7 @@ pageSubtitle = Esta página exibe dados coletados pela telemetria: desempenho, h
 
 generalDataHeadingName = Nome
 
+generalDataHeadingValue = Valor
 
 slowSqlMain = Instruções SQL lentas na thread principal
 
@@ -49,6 +50,7 @@ enableTelemetry = Ativar telemetria
 
 keysHeader = Propriedade
 
+valuesHeader = Valor
 
 addonTableID = ID do complemento
 
