--- a/pt-BR/browser/chrome/browser/places/places.properties
+++ b/pt-BR/browser/chrome/browser/places/places.properties
@@ -22,19 +22,29 @@ bookmarksLivemarkFailed=Falha no carregamento do RSS
 
 menuOpenLivemarkOrigin.label=Abrir “%S”
 
-sortByName=Ordenar “%S” pelo nome
-sortByNameGeneric=Ordenar pelo nome
+sortByName=Ordenar '%S' por nome
+sortByNameGeneric=Ordenar por nome
 # LOCALIZATION NOTE (view.sortBy.1.name.label): sortBy properties are versioned.
 # When any of these changes, all of the properties must be bumped, and the
 # change must be annotated here.  Both label and accesskey must be updated.
 # - version 1: changed view.sortBy.1.date.
-view.sortBy.1.name.label=Ordenar pelo nome
+view.sortBy.1.name.label=Ordenar por nome
 view.sortBy.1.name.accesskey=n
-view.sortBy.1.description.label=Ordenar pela descrição
-view.sortBy.1.description.accesskey=d
-view.sortBy.1.lastModified.label=Ordenar pela data de modificação
+view.sortBy.1.url.label=Ordenar por endereço
+view.sortBy.1.url.accesskey=e
+view.sortBy.1.date.label=Ordenar por visitados mais recentemente
+view.sortBy.1.date.accesskey=c
+view.sortBy.1.visitCount.label=Ordenar por número de visitas
+view.sortBy.1.visitCount.accesskey=v
+view.sortBy.1.keyword.label=Ordenar por palavra-chave
+view.sortBy.1.keyword.accesskey=p
+view.sortBy.1.description.label=Ordenar por descrição
+view.sortBy.1.description.accesskey=s
+view.sortBy.1.dateAdded.label=Ordenar por data
+view.sortBy.1.dateAdded.accesskey=a
+view.sortBy.1.lastModified.label=Ordenar por data de modificação
 view.sortBy.1.lastModified.accesskey=m
-view.sortBy.1.tags.label=Ordenar pela tag
+view.sortBy.1.tags.label=Ordenar por tags
 view.sortBy.1.tags.accesskey=t
 
 searchBookmarks=Localizar nos favoritos
